--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1037,7 +1037,7 @@ html:lang(fr) .cnjnctn-or:before {
                     <div class="gc-font-2019">
                       <p class="wb-fieldflow-label">Is the residential property:</p>
                       <div data-ajax-replace="#exp-4-1" class="gc-font-2019 mrgn-bttm-md"></div>
-                      <div data-ajax-replace="#exp-4-3" class="gc-font-2019 mrgn-bttm-md"></div>
+                      <div data-ajax-replace="#exp-4-3>:not(#exempt-link-rem)" class="gc-font-2019 mrgn-bttm-md"></div>
                     </div>
                   </div>
                   <ul>
@@ -1222,7 +1222,7 @@ html:lang(fr) .cnjnctn-or:before {
                       <p>Your spouse lived at your residential property for a total of 197 days, making you qualify for the exemption of qualifying occupancy.</p>
                     </details>
                     <p class="mrgn-tp-lg">Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423684" target="_blank">Qualifying occupancy period</a></p>
-                    <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423683" target="_blank">Exemption for residential properties that are used for qualifying occupancy</a></p>
+                    <p id="exempt-link-rem"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423683" target="_blank">Exemption for residential properties that are used for qualifying occupancy</a></p>
                   </div>
                 </details>
               </div>
