--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1031,13 +1031,13 @@ html:lang(fr) .cnjnctn-or:before {
             </div>
             <ul>
               <li data-wb-fieldflow='{"action": "removeClass", "source": "#exemption-yes, #ex1", "class": "hidden", "live": true}'>Yes</li>
-              <li>No
+              <li data-wb-fieldflow='{"action": addClass", "source": "#qual-occ-ajax>#exp-4-3>details>#qual-occ-content>#exempt-link-rem", "class": "hidden", "live": true}'>No
                 <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4", "class": "hidden", "live": true}}'>
                   <div class="wb-fieldflow-header">
                     <div class="gc-font-2019">
                       <p class="wb-fieldflow-label">Is the residential property:</p>
                       <div data-ajax-replace="#exp-4-1" class="gc-font-2019 mrgn-bttm-md"></div>
-                      <div data-ajax-replace="#exp-4-3>:not(details>#qual-occ-content>#exempt-link-rem)" class="gc-font-2019 mrgn-bttm-md"></div>
+                      <div id="qual-occ-ajax" data-ajax-replace="#exp-4-3" class="gc-font-2019 mrgn-bttm-md"></div>
                     </div>
                   </div>
                   <ul>
