--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -970,12 +970,14 @@ html:lang(fr) .cnjnctn-or:before {
             </div>
             <ul>
               <li data-wb-fieldflow='{"action": "removeClass", "source": "#exemption-yes, #ex1", "class": "hidden", "live": true}'>Yes</li>
-              <li>No
+              <!--REMINDER********: Also do the hide 4-3>rem-link thing here-->
+	      <li>No
                 <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4", "class": "hidden", "live": true}}'>
                   <div class="wb-fieldflow-header">
                     <div class="gc-font-2019">
                       <p class="wb-fieldflow-label">Is the residential property:</p>
-                      <div data-ajax-replace="#exp-4" class="gc-font-2019 mrgn-bttm-md"></div>
+                      <div data-ajax-replace="#exp-4-1-1" class="gc-font-2019 mrgn-bttm-md"></div>
+		      <div data-ajax-replace="#exp-4-3" class="gc-font-2019 mrgn-bttm-md"></div>
                     </div>
                   </div>
                   <ul>
@@ -1181,7 +1183,7 @@ html:lang(fr) .cnjnctn-or:before {
                     <p>Used as a primary place of residence</p>
                   </li>
                   <li class="cnjnctn-col">
-                    <p>Used for qualifying occupancy</p>
+                    <p id="exp-4-1-1">Used for qualifying occupancy</p>
                   </li>
                 </ul>
               </div>
