--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -976,7 +976,7 @@ html:lang(fr) .cnjnctn-or:before {
                     <div class="gc-font-2019">
                       <p class="wb-fieldflow-label">Is the residential property:</p>
                       <div data-ajax-replace="#exp-4-1-1" class="gc-font-2019 mrgn-bttm-md"></div>
-		      <div data-ajax-replace="#exp-4-3" class="gc-font-2019 mrgn-bttm-md"></div>
+		      <div data-ajax-replace="#exp-4-3>:not(.exempt-link-rem)" class="gc-font-2019 mrgn-bttm-md"></div>
                     </div>
                   </div>
                   <ul>
@@ -1032,13 +1032,13 @@ html:lang(fr) .cnjnctn-or:before {
             </div>
             <ul>
               <li data-wb-fieldflow='{"action": "removeClass", "source": "#exemption-yes, #ex1", "class": "hidden", "live": true}'>Yes</li>
-              <li data-wb-fieldflow='{"action": addClass", "source": "#qual-occ-ajax>#exp-4-3>details>#qual-occ-content>#exempt-link-rem", "class": "hidden", "live": true}'>No
+              <li>No
                 <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4", "class": "hidden", "live": true}}'>
                   <div class="wb-fieldflow-header">
                     <div class="gc-font-2019">
                       <p class="wb-fieldflow-label">Is the residential property:</p>
                       <div data-ajax-replace="#exp-4-1" class="gc-font-2019 mrgn-bttm-md"></div>
-                      <div id="qual-occ-ajax" data-ajax-replace="#exp-4-3" class="gc-font-2019 mrgn-bttm-md"></div>
+                      <div id="qual-occ-ajax" data-ajax-replace="#exp-4-3>:not(.exempt-link-rem)" class="gc-font-2019 mrgn-bttm-md"></div>
                     </div>
                   </div>
                   <ul>
@@ -1223,7 +1223,7 @@ html:lang(fr) .cnjnctn-or:before {
                       <p>Your spouse lived at your residential property for a total of 197 days, making you qualify for the exemption of qualifying occupancy.</p>
                     </details>
                     <p class="mrgn-tp-lg">Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423684" target="_blank">Qualifying occupancy period</a></p>
-                    <p id="exempt-link-rem"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423683" target="_blank">Exemption for residential properties that are used for qualifying occupancy</a></p>
+                    <p class="exempt-link-rem"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423683" target="_blank">Exemption for residential properties that are used for qualifying occupancy</a></p>
                   </div>
                 </details>
               </div>
