updates to read text

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1127,7 +1127,7 @@ html:lang(fr) .cnjnctn-or:before {
           <p>An <strong>affected owner</strong> includes, but is not limited to, the following owners of a residential property in Canada:</p>
           <ul>
             <li>An individual who is <strong>not</strong> a Canadian citizen or permanent resident</li>
-            <li>An individual who is a Canadian citizen or permanent resident, and who owns a residential property  in Canada as a trustee of a trust (other than as a personal representative of a deceased individual, and as a trustee of a mutual fund trust, real estate investment trust, or SIFT trust for Canadian income tax purposes)</li>
+            <li>An individual who is a Canadian citizen or permanent resident, and who owns a residential property  in Canada as a trustee of a trust (other than as a personal representative of a deceased individual, and as a trustee of a mutual fund trust, real estate investment trust, or specified investment flow-through (SIFT) trust for Canadian income tax purposes)</li>
             <li>An individual who is a Canadian citizen or permanent resident, and who owns a residential property as a partner of a partnership</li>
             <li>A corporation that is incorporated outside of Canada</li>
             <li>A Canadian corporation whose shares are not listed on a Canadian stock exchange designated for Canadian income tax purposes</li>
@@ -1140,7 +1140,7 @@ html:lang(fr) .cnjnctn-or:before {
           <p>An <strong>excluded owner</strong> includes, but is not limited to:</p>
           <ul>
             <li>An individual who is a Canadian citizen or permanent resident (unless included in the list of <a href="#affected">affected owners</a>)</li>
-            <li>Any person that owns a residential property as a trustee of a mutual fund trust, real estate investment trust, or specified investment flow-through trust (SIFT) for Canadian income tax purposes</li>
+            <li>Any person that owns a residential property as a trustee of a mutual fund trust, real estate investment trust, or specified investment flow-through (SIFT) trust for Canadian income tax purposes</li>
             <li>A Canadian corporation whose shares are listed on a Canadian stock exchange designated for Canadian income tax purposes</li>
             <li>A registered charity for Canadian income tax purposes</li>
             <li>A cooperative housing corporation, hospital authority, municipality, para-municipal organization, public college, school authority, or university for Canadian GST/HST purposes</li>
@@ -1202,7 +1202,7 @@ html:lang(fr) .cnjnctn-or:before {
                 <details>
                   <summary id="qual-occ">Qualifying occupancy</summary>
                   <div id="qual-occ-content">
-                    <p>A dwelling unit that is part of the residential property, occupied by a certain individual(s) (qualifying occupant(s)), for <strong>one or more</strong> qualifying occupancy periods totalling at least <strong>180 days</strong> in the calendar year. </p>
+                    <p>A dwelling unit that is part of the residential property, occupied by a certain individual(s), known as a qualifying occupant(s), for <strong>one or more</strong> qualifying occupancy periods totalling at least <strong>180 days</strong> in the calendar year. </p>
                     <p>A qualifying occupancy period is at least one month in a calendar year where qualifying occupants have continuous occupancy. </p>
                     <p>Qualifying occupancy periods can be <strong>28 days or longer</strong>.</p>
                     <p>A qualifying occupant is:</p>
