Remove a "read more" link from corporations

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -951,7 +951,7 @@ html:lang(fr) .cnjnctn-or:before {
               <p><a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">Contact us</a></p>
             </div>
           </div>
-          <div id="affected-owner" class="wb-fieldflow-sub hidden gc-font-2019" data-wb-fieldflow='{"renderas": "radio", "noForm": true, "gcChckbxrdio":true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4", "class": "hidden", "live": true}}'>
+          <div id="affected-owner" class="wb-fieldflow-sub hidden gc-font-2019" data-wb-fieldflow='{"renderas": "radio", "noForm": true, "gcChckbxrdio":true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4, #ex4-res", "class": "hidden", "live": true}}'>
             <div class="wb-fieldflow-header">
               <div class="gc-font-2019">
                 <div class="alert alert-info">
@@ -971,7 +971,7 @@ html:lang(fr) .cnjnctn-or:before {
             <ul>
               <li data-wb-fieldflow='{"action": "removeClass", "source": "#exemption-yes, #ex1", "class": "hidden", "live": true}'>Yes</li>
 	      <li>No
-                <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4", "class": "hidden", "live": true}}'>
+                <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4, #ex4-res", "class": "hidden", "live": true}}'>
                   <div class="wb-fieldflow-header">
                     <div class="gc-font-2019">
                       <p class="wb-fieldflow-label">Is the residential property:</p>
@@ -981,9 +981,9 @@ html:lang(fr) .cnjnctn-or:before {
                     </div>
                   </div>
                   <ul>
-                    <li data-wb-fieldflow='{"action": "removeClass", "source": "#exemption-yes, #ex4", "class": "hidden", "live": true}'>Yes</li>
+                    <li data-wb-fieldflow='{"action": "removeClass", "source": "#exemption-yes, #ex4, #ex4-res", "class": "hidden", "live": true}'>Yes</li>
                     <li>No
-                      <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4", "class": "hidden", "live": true}}'>
+                      <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4, #ex4-res", "class": "hidden", "live": true}}'>
                         <div class="wb-fieldflow-header">
                           <div class="gc-font-2019">
                             <p class="wb-fieldflow-label">Is the residential property one of the following: </p>
@@ -993,7 +993,7 @@ html:lang(fr) .cnjnctn-or:before {
                         <ul>
                           <li data-wb-fieldflow='{"action": "removeClass", "source": "#exemption-yes, #ex2", "class": "hidden", "live": true}'>Yes</li>
                           <li>No
-                            <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4", "class": "hidden", "live": true}}'>
+                            <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4, #ex4-res", "class": "hidden", "live": true}}'>
                               <div class="wb-fieldflow-header">
                                 <div class="gc-font-2019">
                                   <p class="wb-fieldflow-label">Based on its location, is the residential property:</p>
@@ -1014,7 +1014,7 @@ html:lang(fr) .cnjnctn-or:before {
               </li>
             </ul>
           </div>
-          <div id="affected-owner-corp" class="wb-fieldflow-sub hidden gc-font-2019" data-wb-fieldflow='{"renderas": "radio", "noForm": true, "gcChckbxrdio":true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4", "class": "hidden", "live": true}}'>
+          <div id="affected-owner-corp" class="wb-fieldflow-sub hidden gc-font-2019" data-wb-fieldflow='{"renderas": "radio", "noForm": true, "gcChckbxrdio":true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4, #ex4-res", "class": "hidden", "live": true}}'>
             <div class="wb-fieldflow-header">
               <div class="gc-font-2019">
                 <div class="alert alert-info">
@@ -1034,7 +1034,7 @@ html:lang(fr) .cnjnctn-or:before {
             <ul>
               <li data-wb-fieldflow='{"action": "removeClass", "source": "#exemption-yes, #ex1", "class": "hidden", "live": true}'>Yes</li>
               <li>No
-                <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4", "class": "hidden", "live": true}}'>
+                <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4, #ex4-res", "class": "hidden", "live": true}}'>
                   <div class="wb-fieldflow-header">
                     <div class="gc-font-2019">
                       <p class="wb-fieldflow-label">Is the residential property:</p>
@@ -1045,7 +1045,7 @@ html:lang(fr) .cnjnctn-or:before {
                   <ul>
                     <li data-wb-fieldflow='{"action": "removeClass", "source": "#exemption-yes, #ex4", "class": "hidden", "live": true}'>Yes</li>
                     <li>No
-                      <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4", "class": "hidden", "live": true}}'>
+                      <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4, #ex4-res", "class": "hidden", "live": true}}'>
                         <div class="wb-fieldflow-header">
                           <div class="gc-font-2019">
                             <p class="wb-fieldflow-label">Is the residential property one of the following: </p>
@@ -1096,7 +1096,7 @@ html:lang(fr) .cnjnctn-or:before {
               <div class="hidden" id="ex4">
                 <p class="pull-left">Read more:</p>
                 <ul class="pull-left mrgn-lft-md list-unstyled small">
-                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423683" target="_blank">Exemption for residential properties that are used as a primary place of residence</a></li>
+                  <li class="hidden" id="ex4-res"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423683" target="_blank">Exemption for residential properties that are used as a primary place of residence</a></li>
                  
                   <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423683" target="_blank">Exemption for residential properties that are used for qualifying occupancy</a></li>
 			  
