--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -975,9 +975,12 @@ html:lang(fr) .cnjnctn-or:before {
                   <div class="wb-fieldflow-header">
                     <div class="gc-font-2019">
                       <p class="wb-fieldflow-label">Is the residential property:</p>
-		      <div data-ajax-replace="#exp-4-1" class="gc-font-2019 mrgn-bttm-md"></div>
-                      <div data-ajax-replace="#exp-4-2" class="gc-font-2019 mrgn-bttm-md"></div>
-		      <div data-ajax-replace="#exp-4-3>:not(.exempt-link-rem)" class="gc-font-2019 mrgn-bttm-md"></div>
+		      <div data-ajax-replace=" #exp-4-1" class="gc-font-2019 mrgn-bttm-md"></div>
+                      <div data-ajax-replace=" #exp-4-2" class="gc-font-2019 mrgn-bttm-md"></div>
+			<details>
+				<summary>Qualifying occupancy</summary>
+				<div data-ajax-replace=" #qual-occ-content>:not(.exempt-link-rem)"></div>
+			</details>
                     </div>
                   </div>
                   <ul>
@@ -1039,7 +1042,10 @@ html:lang(fr) .cnjnctn-or:before {
                     <div class="gc-font-2019">
                       <p class="wb-fieldflow-label">Is the residential property:</p>
                       <div data-ajax-replace="#exp-4-1-1" class="gc-font-2019 mrgn-bttm-md"></div>
-                      <div id="qual-occ-ajax" data-ajax-replace="#exp-4-3>:not(.exempt-link-rem)" class="gc-font-2019 mrgn-bttm-md"></div>
+                      <details>
+				<summary>Qualifying occupancy</summary>
+				<div data-ajax-replace=" #qual-occ-content>:not(.exempt-link-rem)"></div>
+			</details>
                     </div>
                   </div>
                   <ul>
