--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -229,7 +229,7 @@
 
 </li>
 <li class="cnjnctn-col"><h3>A direct transfer</h3>
-<p>when you  <a href="out.html#h-1-3">transfer from your FHSA to your RRSPs or RRIFs</a></p>
+<p>when you  <a href="out.html#h-1-3">transfer from your FHSA to your RRSPs or RRIFs</a> in certain situations</p>
 </li>
 </ul>
 <p>A withdrawal or transfer from an FHSA <strong>must be included as income</strong> on your income tax and benefit return if it is a taxable withdrawal. When your withdrawal is not a qualifying withdrawal, designated amount, or an amount otherwise included in your income it is a  <a href="out.html#h-2">taxable withdrawal.</a></p></p>
@@ -473,7 +473,7 @@
 <p>If you have an excess FHSA amount, one of the ways that you can reduce or eliminate your excess FHSA amount is to make a designated withdrawal. The amount of the designated withdrawal is not required to be included as income on your income tax and benefit return in the year. For more information, go to&nbsp;<a href="toomuch.html">What happens if you contribute or transfer too much to your FHSAs</a>.</p>
 
      <h3 id="h-1-3">Transfers from your FHSAs to your RRSPs or RRIFs</h3>
-    <p>You will be allowed to transfer property from your FHSAs to your RRSPs or RRIFs without any immediate tax consequences, as long as it is a <strong>direct transfer</strong> and you do not have an excess FHSA amount.</p>
+    <p>You will be allowed to transfer property from your FHSAs to your RRSPs or RRIFs without any immediate tax consequences, as long as it is a <strong>direct transfer</strong> and you do not have an excess FHSA amount. A direct transfer is a transfer completed directly between the financial institutions of the two plans or accounts involved.</p>
 <p>Generally, an amount that is transferred directly from your FHSAs to your RRSPs or RRIFs will not impact your unused RRSP deduction room or your unused FHSA participation room.</p>
 <p>If you do not do a direct transfer, the amount you withdraw from your FHSA would be a taxable withdrawal and would be treated as a new RRSP contribution. That new contribution would reduce your unused RRSP deduction room and could result in RRSP excess contributions in certain cases.</p>
          <p>To complete a direct transfer from your FHSAs to your RRSPs or RRIFs, you must fill out Form&nbsp;<a href="/en/revenue-agency/services/forms-publications/forms/rc721.html">RC721, Transfer from your FHSA to your FHSA, RRSP or RRIF</a> and give it to your financial institution.</p>
