--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html
@@ -29,13 +29,19 @@
          </script>
         <style>
         /* increase width of dt */    
-        .dl-horizontal dd {
-            margin-left: 200px;
-          }
-        
-        .dl-horizontal dt {
-            width: 180px;
-          }
+	.dl-horizontal dd {
+	  padding-left: 30px;
+	}
+	
+	@media screen and (max-width: 768px) {        
+	.dl-horizontal dd {
+	  padding-left: 0px;
+	}
+	}
+	
+	.dl-horizontal dt {
+	  width: 180px;
+	}
         </style>      
       </head>
       <body vocab="http://schema.org/" typeof="WebPage" class="experimental">
