--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -935,7 +935,7 @@ html:lang(fr) .cnjnctn-or:before {
             </form>
           </div>
           <div id="excluded-owner" tabindex="0" class="hidden">
-            <div class="alert alert-info">
+            <div class="alert alert-info" aria-live="polite">
               <h4 class="h3"><small>Based on your choice, your result is:</small><br>
                 You are an excluded owner</h4>
               <p>You have <strong>no obligations</strong> under the Underused Housing Tax Act. </p>
@@ -944,7 +944,7 @@ html:lang(fr) .cnjnctn-or:before {
             </div>
           </div>
           <div id="unsure-owner" tabindex="0" class="hidden">
-            <div class="alert alert-info">
+            <div class="alert alert-info" aria-live="polite"> 
               <h4 class="h3"><small>Based on your choice, your result is:</small><br>
                 You are unsure</h4>
               <p>If you are uncertain about your obligations under the Underused Housing Tax Act, you may contact us or request a ruling or interpretation about how the tax applies to your specific situation.</p>
@@ -954,7 +954,7 @@ html:lang(fr) .cnjnctn-or:before {
           <div id="affected-owner" class="wb-fieldflow-sub hidden gc-font-2019" data-wb-fieldflow='{"renderas": "radio", "noForm": true, "gcChckbxrdio":true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4, #ex4-res", "class": "hidden", "live": true}}'>
             <div class="wb-fieldflow-header">
               <div class="gc-font-2019">
-                <div class="alert alert-info">
+                <div class="alert alert-info" aria-live="polite">
                   <h4 class="h3"><small>Based on your choice, your result is:</small><br>
                     You are an affected owner</h4>
                   <p>You <strong>must file</strong> a return for the residential property. </p>
@@ -1020,7 +1020,7 @@ html:lang(fr) .cnjnctn-or:before {
           <div id="affected-owner-corp" class="wb-fieldflow-sub hidden gc-font-2019" data-wb-fieldflow='{"renderas": "radio", "noForm": true, "gcChckbxrdio":true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4, #ex4-res", "class": "hidden", "live": true}}'>
             <div class="wb-fieldflow-header">
               <div class="gc-font-2019">
-                <div class="alert alert-info">
+                <div class="alert alert-info" aria-live="polite">
                   <h4 class="h3"><small>Based on your choice, your result is:</small><br>
                     You are an affected owner</h4>
                   <p>You <strong>must file</strong> a return for the residential property. </p>
@@ -1071,8 +1071,10 @@ html:lang(fr) .cnjnctn-or:before {
           </div>
           <div id="exemption-yes" tabindex="0" class="hidden">
             <div class="alert alert-info">
-              <h4 class="h3"><small>Based on your choice, your result is:</small><br>
+              <div aria-live="polite">
+		    <h4 class="h3"><small>Based on your choice, your result is:</small><br>
                 You may qualify for an exemption</h4>
+	      </div>
               <p>Indicate your exemption in parts 4-6 of your Underused Housing Tax return.</p>
               <div class="hidden" id="ex1">
                 <p class="pull-left">Read more:</p>
@@ -1112,7 +1114,7 @@ html:lang(fr) .cnjnctn-or:before {
             </div>
           </div>
           <div id="exemption-no" tabindex="0" class="hidden">
-            <div class="alert alert-info">
+            <div class="alert alert-info" aria-live="polite"> 
               <h4 class="h3"><small>Based on your choice, your result is:</small><br>
                 You do not qualify for an exemption</h4>
             </div>
