--- a/maire/register.html
+++ b/maire/register.html
@@ -61,6 +61,26 @@
 
       <div class="col-lg-7">
 		<p>Follow these steps to determine the best way to get access to My Account.</p>
+
+	       <div class="mrgn-tp-lg header-bg">
+      <h2>Sign in</h2>
+      <div class="brdr-bttm-fade"></div>
+    </div>
+    <div class="panel">
+      <div class="panel-body">
+        <p>If you already have a GCOS account, select an option to sign in:</p>
+        <ul class="list-unstyled row mrgn-bttm-0 wb-eqht">
+          <li class="col-md-4"> <a href="https://srv136.services.gc.ca/ecas-seca/rascl/Initialize.aspx?Lang=eng&amp;Idp=https://clegc-gckey.gc.ca&amp;AppCode=GCOS" class="btn btn-blue large-btn" data-gc-analytics-customclick="ESDC|EDSC:MSCA Sign in:Sign in with GCKey Click">
+            <div class="icon-btn"><img src="/content/canadasite/content/dam/esdc-edsc/images/services/msca-mdsc/key-white.png" alt=""></div>
+            <div class="label-btn"><b>Sign in  with GCKey</b></div>
+            </a> </li>
+          <li class="col-md-4"> <a href="https://srv136.services.gc.ca/ecas-seca/rascl/Initialize.aspx?Lang=eng&amp;Idp=https://services.securekeyconcierge.com/cbs&amp;AppCode=GCOS" class="btn btn-red large-btn" data-gc-analytics-customclick="ESDC|EDSC:MSCA Sign in:Sign in with your bank Click">
+            <div class="icon-btn"><img src="/content/canadasite/content/dam/esdc-edsc/images/services/msca-mdsc/bank-white.png" alt=""></div>
+            <div class="label-btn"><b>Sign in  with your bank</b></div>
+            </a> </li>
+        </ul>
+      </div>
+      
 	  
 		<!--div class="mwsbodytext text parbase section">
 			<p class="pull-left small"><strong>You may be looking for:</strong></p>
