--- a/maire/register.html
+++ b/maire/register.html
@@ -89,9 +89,10 @@
       <h2>Register</h2>
       <div class="brdr-bttm-fade"></div>
     </div>
-	      <!--div class="mwsbodytext text parbase section">
+	      <div class="mwsbodytext text parbase section">
 	    <p>If you have never accessed your CRA account, select an option to register</p>
-	    
+	    	      <!--div class="mwsbodytext text parbase section">
+
 		
 			<p class="pull-left small"><strong>You may be looking for:</strong></p>
 			<ul class="pull-left mrgn-lft-md list-unstyled small">
