--- a/maire/register.html
+++ b/maire/register.html
@@ -68,15 +68,15 @@
     </div>
     <div class="panel">
       <div class="panel-body">
-        <p>If you already have a GCOS account, select an option to sign in:</p>
+        <p>If you have already registered a CRA account, select an option to sign in:</p>
         <ul class="list-unstyled row mrgn-bttm-0 wb-eqht">
           <li class="col-md-4"> <a href="https://srv136.services.gc.ca/ecas-seca/rascl/Initialize.aspx?Lang=eng&amp;Idp=https://clegc-gckey.gc.ca&amp;AppCode=GCOS" class="btn btn-blue large-btn" data-gc-analytics-customclick="ESDC|EDSC:MSCA Sign in:Sign in with GCKey Click">
             <div class="icon-btn"><img src="/content/canadasite/content/dam/esdc-edsc/images/services/msca-mdsc/key-white.png" alt=""></div>
-            <div class="label-btn"><b>Sign in  with CRA ID</b></div>
+            <div class="label-btn"><b>Sign in  with your bank</b></div>
             </a> </li>
           <li class="col-md-4"> <a href="https://srv136.services.gc.ca/ecas-seca/rascl/Initialize.aspx?Lang=eng&amp;Idp=https://services.securekeyconcierge.com/cbs&amp;AppCode=GCOS" class="btn btn-red large-btn" data-gc-analytics-customclick="ESDC|EDSC:MSCA Sign in:Sign in with your bank Click">
             <div class="icon-btn"><img src="/content/canadasite/content/dam/esdc-edsc/images/services/msca-mdsc/bank-white.png" alt=""></div>
-            <div class="label-btn"><b>Sign in  with your bank</b></div>
+            <div class="label-btn"><b>Sign in  with CRA ID</b></div>
             </a> </li>
 		<li class="col-md-4"> <a href="https://srv136.services.gc.ca/ecas-seca/rascl/Initialize.aspx?Lang=eng&amp;Idp=https://services.securekeyconcierge.com/cbs&amp;AppCode=GCOS" class="btn btn-red large-btn" data-gc-analytics-customclick="ESDC|EDSC:MSCA Sign in:Sign in with your bank Click">
             <div class="icon-btn"><img src="/content/canadasite/content/dam/esdc-edsc/images/services/msca-mdsc/bank-white.png" alt=""></div>
