--- a/payroll/calculate/index.html
+++ b/payroll/calculate/index.html
@@ -75,13 +75,13 @@
 <dl>
 
   <dt>    <a href="when/index.html">Get ready to make deductions</a>  </dt>
-  <dd>Learn about the Canada Pension Plan (CPP), the Employment Insurance (EI) and the income tax deductions, including the CPP/EI/IT rates, the CPP/EI maximums and the CPP exemptions </dd>
+  <dd>Learn about Canada Pension Plan (CPP), Employment Insurance (EI) and the income tax deductions, including the CPP, EI and income tax rates, the CPP/EI maximums and the CPP exemptions </dd>
 
   <dt>    <a href="benefit/index.html">Determine if a benefit is taxable</a>  </dt>
   <dd>Before you calculate, determine if the benefits are taxable and if you need to deduct CPP, EI and income tax</dd>
 
    <dt>    <a href="payment/index.html">Determine the tax treatment of payments other than regular employment income</a>  </dt>
-  <dd>Before you calculate, determine if you need to deduct CPP, EI and income tax from payments other than regular employment income or in special situations (for example, when individual life situation changes or to find out when employee or self-employed worker)</dd>
+  <dd>Before you calculate, determine if you need to deduct CPP, EI and income tax from payments other than regular employment income or in special situations (for example, when individual life situations change or to find out when a worker is an employee or self-employed)</dd>
   
   
   <dt>    <a href="how/index.html">How to calculate</a>  </dt>
@@ -89,7 +89,7 @@
  
 
    <dt>    <a href="corrections/index.html">Make corrections before filing </a>  </dt>
-  <dd>What to do if you want to correct deductions errors in the current tax year  </dd>
+  <dd>What to do if you want to correct deduction errors in the current tax year  </dd>
 
 </dl>            
 
