--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -84,7 +84,7 @@
             <h1 property="name" id="wb-cont" class="gc-thickline">Determine the tax treatment of payments other than regular employment income</h1>
          
  
-    <p>Before you calculate, determine if you need to deduct CPP, EI and income tax from payments other than regular employment income.</p>
+    <p>Before you calculate, determine if you need to deduct CPP, EI and income tax from payments other than regular employment income or in special situations (for example, when individual life situations change or to find out when a worker is an employee or self-employed).</p>
 	
 			
 			
