--- a/payroll/calculate/when/learncpp.html
+++ b/payroll/calculate/when/learncpp.html
@@ -75,8 +75,8 @@
                         <li> <a href="cpprates.html" class="hidden-xs hidden-sm">CPP contribution rates, maximums and exemptions</a>
                            <a href="cpprates.html#gc-document-nav" class="visible-xs visible-sm">CPP contribution rates, maximums and exemptions</a>
                         </li>
-                         <li> <a href="cpp2rates.html" class="hidden-xs hidden-sm">Second CPP (CPP2) contribution rates and maximums</a> 
-                           <a href="cpp2rates.html#gc-document-nav" class="visible-xs visible-sm">Second CPP (CPP2) contribution rates and maximums </a> <span class="label label-warning">New - 2024</span>
+                         <li> <a href="cpp2rates.html" class="hidden-xs hidden-sm">Second CPP contribution (CPP2) rates and maximums</a> 
+                           <a href="cpp2rates.html#gc-document-nav" class="visible-xs visible-sm">Second CPP contribution (CPP2) rates and maximums </a> <span class="label label-warning">New - 2024</span>
                         </li>
                         <li> <a href="learnei.html" class="hidden-xs hidden-sm">About the deduction of EI premiums</a>
                            <a href="learnei.html#gc-document-nav" class="visible-xs visible-sm">About the deduction of EI premiums</a>
@@ -250,9 +250,9 @@
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings.html">Canada Pension Plan (CPP) and Employment Insurance (EI) Rulings</a></li>
 </ul>     
 <h2 id="h_10">What is the CPP enhancement</h2>
-<p>Before January 1, 2019, employees contributed 4.95% on their annual maximum pensionable earnings to the CPP, with employers making an equal contribution. These are the <strong>base contributions </strong>to the CPP. </p>
-<p>From 2019 to 2023, the contribution rate for employees is increased gradually from 4.95% to 5.95%. This is the <strong>first additional contribution </strong>to the CPP. </p>
-<p>Beginning in 2024, a second higher ceiling (the year's additional maximum pensionable earnings) is introduced. A <strong>second additional CPP (CPP2) contribution </strong>is made on these earnings, beginning at the first earnings ceiling and going up to the second earnings ceiling. </p>
+<p>Before January 1, 2019, employees were making a contribution of 4.95% on their pensionable earnings up to their annual maximum pensionable earnings (first ceiling), with employers making an equal contribution. These are the <strong>base contributions </strong>to the CPP. </p>
+<p>From 2019 to 2023, the contribution rate for employees is increased gradually from 4.95% to 5.95%. These are the base contributions (4.95%) and the <strong>first additional contribution</strong> to the CPP (1%).</p>
+<p>Beginning in 2024, a year's additional maximum pensionable earnings (second higher ceiling) is introduced. A <strong>second additional CPP contribution (CPP2)</strong> is made on these earnings, beginning at the first earnings ceiling and going up to the second earnings ceiling. </p>
 
 
        <h2 id="h_11"> References</h2>
@@ -278,11 +278,14 @@
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-2.html#docCont">CPP: 6(2)</a></dt><dd>Excepted employment </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-2.html#docCont">CPP: 7(1)</a></dt><dd>Regulations respecting employment to be included in pensionable employment </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-2.html#docCont">CPP: 7(2)</a></dt><dd>Regulations respecting employment to be excepted from pensionable employment</dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-2.html#docCont">CPP: 8</a></dt><dd>Contributions by employees and employers in respect of pensionable employment </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-2.html#docCont">CPP: 8</a></dt><dd>Contributions by employees in respect of pensionable employment</dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-3.html#docCont">CPP: 9</a></dt><dd>Contributions by employers in respect of pensionable employment</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-3.html#docCont">CPP: 9(2)</a></dt><dd>Succession of employers </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-3.html#docCont">CPP: 10</a></dt><dd>Contributions by persons in respect of self-employed earnings </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-3.html#docCont">CPP: 12</a></dt><dd>Contributory salary and wages </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-4.html#docCont">CPP: 15</a></dt><dd>Salary and wages on which contribution made </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-5.html#docCont:~:text=Amount%20of%20maximum%20pensionable%20earnings">CPP: 17</a></dt><dd>Employee’s yearly maximum pensionable earnings </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-5.html#docCont:~:text=Amount%20of%20additional%20maximum%20pensionable%20earnings">CPP: 17.1</a></dt><dd>Employee’s yearly additional maximum pensionable earnings </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-5.html#docCont">CPP: 18</a></dt><dd>Year’s maximum pensionable earnings </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-5.html#docCont">CPP: 19</a></dt><dd>Amount of basic exemption </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-6.html#docCont">CPP: 21(1)</a></dt><dd>Amount to be deducted and remitted by employer </dd>
