--- a/payroll/calculate/when/cpprates.html
+++ b/payroll/calculate/when/cpprates.html
@@ -72,8 +72,8 @@
 
     <li> <a href="cpprates.html" class="active" aria-current="page">CPP contribution rates, maximums and exemptions</a></li>
 
-         <li> <a href="cpp2rates.html" class="hidden-xs hidden-sm">Second CPP (CPP2) contribution rates and maximums</a> 
-                           <a href="cpp2rates.html#gc-document-nav" class="visible-xs visible-sm">Second CPP (CPP2) contribution rates and maximums </a> <span class="label label-warning">New - 2024</span>
+         <li> <a href="cpp2rates.html" class="hidden-xs hidden-sm">Second CPP contribution (CPP2) rates and maximums</a> 
+                           <a href="cpp2rates.html#gc-document-nav" class="visible-xs visible-sm">Second CPP contribution (CPP2) rates and maximums </a> <span class="label label-warning">New - 2024</span>
                         </li>
 		<li> <a href="learnei.html" class="hidden-xs hidden-sm">About the deduction of EI premiums</a> <a href="learnei.html#gc-document-nav" class="visible-xs visible-sm">About the deduction of EI premiums</a> </li>
           <li> <a href="eirates.html" class="hidden-xs hidden-sm">EI premium rates and maximums</a> <a href="eirates.html#gc-document-nav" class="visible-xs visible-sm">EI premium rates and maximums</a> </li>
@@ -92,7 +92,7 @@
   </nav>
   <h1 property="name" id="wb-cont" class="gc-thickline">CPP contribution rates, maximums and exemptions</h1>
 <div class="alert alert-warning">
-<p>Beginning <strong>January 1, 2024</strong>, once the first maximum pensionable earnings ceiling is reached, you must begin to deduct the second additional CPP (CPP2) deductions using the <a href="/cra-arc/payroll/calculate/when/cpp2rates.html">second CPP (CPP2) contribution rates and maximums</a>.</p>
+<p>Beginning <strong>January 1, 2024</strong>, once the first maximum pensionable earnings ceiling is reached, you must deduct the <a href="/cra-arc/payroll/calculate/when/cpp2rates.html">second additional CPP contributions (CPP2)</a> on earnings above the annual maximum pensionable earnings.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html#h_10">What is the CPP enhancement</a> </p>
 </div>		
 	
