--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -75,7 +75,7 @@
                            <a href="cpprates.html#gc-document-nav" class="visible-xs visible-sm">CPP contribution rates, maximums and exemptions </a>
                         </li> 
 
-         <li> <a href="cpp2rates.html" class="active" aria-current="page">Second CPP (CPP2) contribution rates and maximums</a> <span class="label label-warning">New - 2024</span></li>
+         <li> <a href="cpp2rates.html" class="active" aria-current="page">Second CPP contribution (CPP2) rates and maximums</a> <span class="label label-warning">New - 2024</span></li>
 
 		<li> <a href="learnei.html" class="hidden-xs hidden-sm">About the deduction of EI premiums</a> <a href="learnei.html#gc-document-nav" class="visible-xs visible-sm">About the deduction of EI premiums</a> </li>
           <li> <a href="eirates.html" class="hidden-xs hidden-sm">EI premium rates and maximums</a> <a href="eirates.html#gc-document-nav" class="visible-xs visible-sm">EI premium rates and maximums</a> </li>
@@ -92,9 +92,9 @@
       <li> <a href="../corrections/index.html" class="hidden-xs hidden-sm">Make corrections before filing</a> <a href="../corrections/index.html#gc-document-nav" class="visible-xs visible-sm">Make corrections before filing</a> </li>
     </ul>
   </nav>
-  <h1 property="name" id="wb-cont" class="gc-thickline">Second additional CPP (CPP2) contribution rates and maximums</h1>
+  <h1 property="name" id="wb-cont" class="gc-thickline">Second additional CPP contribution (CPP2) rates and maximums</h1>
 <div class="alert alert-warning">
-<p>Beginning <strong>January 1, 2024</strong>, once the <a href="/cra-arc/payroll/calculate/when/cpprates.html">first maximum pensionable earnings ceiling</a> is reached, you must deduct the second additional CPP (CPP2) contributions using the following rates and maximums.</p>
+<p>Beginning <strong>January 1, 2024</strong>, once the <a href="/cra-arc/payroll/calculate/when/cpprates.html">first maximum pensionable earnings ceiling</a> you must deduct the second additional CPP contributions (CPP2) on earnings above the annual maximum pensionable earnings using the following rates and maximums.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html#h_10">What is the CPP enhancement</a> </p>
 
 </div>	
